

noinst_LIBRARIES = libiberty.a

libiberty_a_SOURCES = _doprnt.c \
	alloca.c		\
	argv.c			\
	asprintf.c		\
	atexit.c		\
	basename.c		\
	bcmp.c			\
	bcopy.c			\
	bsearch.c		\
	bzero.c			\
	calloc.c		\
	choose-temp.c		\
	clock.c			\
	concat.c		\
	copysign.c		\
	cp-demangle.c		\
	cplus-dem.c		\
	dyn-string.c		\
	fdmatch.c		\
	ffs.c			\
	fibheap.c		\
	floatformat.c		\
	fnmatch.c		\
	getopt.c		\
	getopt1.c		\
	getpagesize.c		\
	getpwd.c		\
	getruntime.c		\
	hashtab.c		\
	hex.c			\
	index.c			\
	insque.c		\
	lbasename.c		\
	make-temp-file.c	\
	md5.c			\
	memchr.c		\
	memcmp.c		\
	memcpy.c		\
	memmove.c		\
	memset.c		\
	mkstemps.c		\
	msdos.c			\
	objalloc.c		\
	obstack.c		\
	partition.c		\
	pexecute.c		\
	putenv.c		\
	random.c		\
	regex.c			\
	rindex.c		\
	safe-ctype.c		\
	setenv.c		\
	sigsetmask.c		\
	sort.c			\
	spaces.c		\
	splay-tree.c		\
	strcasecmp.c		\
	strchr.c		\
	strdup.c		\
	strerror.c		\
	strncasecmp.c		\
	strncmp.c		\
	strrchr.c		\
	strsignal.c		\
	strstr.c		\
	strtod.c		\
	strtol.c		\
	strtoul.c		\
	ternary.c		\
	tmpnam.c		\
	vasprintf.c		\
	vfork.c			\
	vfprintf.c		\
	vprintf.c		\
	vsprintf.c		\
	waitpid.c		\
	xatexit.c		\
	xexit.c			\
	xmalloc.c		\
	xmemdup.c		\
	xstrdup.c		\
	xstrerror.c
#	rename.c		
#	getcwd.c		

EXTRA_DIST = copying-lib.texi functions.texi libiberty.texi obstacks.texi

